[package]
name = "vox_cryptography"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]
std = ["byteorder/std"]
alloc = []

[[bench]]
name = "hashes"
harness = false

[[bench]]
name = "block_cipher"
harness = false

[dependencies]
byteorder = { version = "1.4", default-features = false }
base64 = "0.13" # will replace with own implementation

[dev-dependencies]
pretty_assertions = "1.2"
criterion = "0.3"
hex = "0.4"
